--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+/.idea
+/gradle
 .DS_Store
 /build
 /captures
+gradlew
+gradlew.bat
 .externalNativeBuild
